# taigi-tesstrain

./: .gitignore  README.md  collect-and-train.sh  extract.ts  image-split-lines.ts  log.org  package.json  populate-initial-gt.sh  pyproject.toml  splitFile.ts  utils.ts  vgg-convert-to-boxes.ts
data/ftg/: ftg.punc
data/ftg-ground-truth/: 20260621T200605+0900-1.gt.txt  20260621T200605+0900-2.gt.txt  20260621T200605+0900.gt.txt  20260621T200756+0900.gt.txt  20260621T200923+0900.gt.txt  20260621T201129+0900.gt.txt  20260621T201227+0900.gt.txt  20260621T201304+0900-line-001.gt.txt  20260621T201304+0900-line-002.gt.txt  20260621T201304+0900-line-003.gt.txt  20260621T201304+0900-line-004.gt.txt  20260621T201304+0900-line-005.gt.txt  20260621T201304+0900-line-006.gt.txt  20260621T201304+0900-line-007.gt.txt  20260621T201304+0900-line-008.gt.txt  20260621T201304+0900-line-009.gt.txt  20260621T201304+0900-line-010.gt.txt  20260621T201304+0900.gt.txt  20260621T215017+0900-line-001.gt.txt  20260621T215017+0900-line-002.gt.txt  20260621T215017+0900-line-003.gt.txt  README.md  manual-TOHSKHP_1905_014.box  manual-TOHSKHP_1905_014.gt.txt  manual-TOHSKHP_1905_014.via.json
data/ftg-ground-truth/TOHSKHP/: TOHSKHP_1905_014.box  TOHSKHP_1905_014.gt.txt  TOHSKHP_1905_014.via.json  TOHSKHP_1915_015.box  TOHSKHP_1915_015.gt.txt  TOHSKHP_1915_015.via.json
src/tesstrain/: language_specific.py
