[project]
name = "tesstrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pillow>=6.2.1",
    "pytesstrain>=0.1.16",
    "python-bidi>=0.4",
    "tqdm>=4.68.2",
]

[tool.uv]
package = true
